<resources>
    <string name="app_name">BarberShop</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="slogan">Красивее не бывает...</string>
    <string name="hairstyles">Прически</string>
    <string name="book">Забронироваться</string>
    <string name="where_we_are">Где мы</string>
    <string name="feedback">Отзывы</string>
    <string name="contacts">Контакты</string>
    <string name="have_a_question">Есть вопрос?</string>
    <string name="select_date">Выберите дату</string>
    <string name="man">Мужской</string>
    <string name="woman">Женский</string>
    <string name="gender_not_selected">Выберите пол!</string>
    <string name="connection_error">Проблемы с сетью :(</string>
    <string name="master">Мастер</string>
    <string name="select_gender">Выберите пол</string>
    <string name="select_master">Выберите мастера</string>
    <string name="select_service">Выберите услуги</string>
    <string name="insert_data">Заполните поля</string>
    <string name="insert_all_data">Заполните все поля!</string>
    <string name="select_time">Выберите время</string>
    <string name="next">Далее</string>
    <string name="confirm_reservation">Подтвердите Ваш заказ</string>
    <string name="look_booking">Посмотреть Ваши записи, а так же отменить бронирование вы можетете во вкладке "Мои записи"</string>
    <string name="Sales">Акции</string>
    <string name="add_rating">Оцените нас от 1 до 5</string>
    <string name="add_title">Дайте заголовок Вашему отзыву</string>
    <string name="add_text">Напишите отзыв</string>
    <string name="feedback_saved">Отзыв отправлен!</string>
    <string name="title_activity_where_we_are">Map</string>
    <string name="here_we_are">Мы здесь</string>
    <string name="my_books">Мои записи</string>
    <string name="more">Подробнее</string>
</resources>
