<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hairstyles"
            android:icon="@drawable/hairstyles_icon"
            android:title="@string/hairstyles" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_book"
            android:title="@string/book" />
        <item
            android:id="@+id/nav_where_we_are"
            android:icon="@drawable/ic_map"
            android:title="@string/where_we_are" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/contacts"
            />
        <item
            android:id="@+id/nav_question"
            android:icon="@drawable/ic_question"
            android:title="@string/have_a_question"/>
    </group>

</menu>
