<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="false">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/book_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:elevation="18dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="2">
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/select_gender"
                            android:textSize="14sp"
                            android:id="@+id/select_gender_btn"
                            android:gravity="start|center_vertical"
                            android:paddingStart="60dp"
                            android:background="@drawable/book_button_selector"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorBlack"
                            android:layout_marginStart="60dp"
                            android:layout_marginEnd="30dp"/>
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/select_date"
                            android:textSize="14sp"
                            android:id="@+id/select_date_btn"
                            android:gravity="start|center_vertical"
                            android:paddingStart="60dp"
                            android:background="@drawable/book_button_selector"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_gender"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_calendar"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="2">
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/select_master"
                            android:textSize="14sp"
                            android:id="@+id/select_hairdresser_btn"
                            android:gravity="start|center_vertical"
                            android:paddingStart="60dp"
                            android:background="@drawable/book_button_selector"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorBlack"
                            android:layout_marginStart="60dp"
                            android:layout_marginEnd="30dp"/>
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/select_service"
                            android:textSize="14sp"
                            android:id="@+id/select_service_btn"
                            android:gravity="start|center_vertical"
                            android:paddingStart="60dp"
                            android:background="@drawable/book_button_selector"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_person"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_hairstyle_service"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="Список услуг:"
                android:textColor="@color/colorBlack"
                android:textSize="25dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/services_list_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp">

            </android.support.v7.widget.RecyclerView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:text="Итого:"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="7dp"
                    android:id="@+id/total_sum"
                    android:layout_toLeftOf="@+id/uan_img"
                    android:text="0"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/uan_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/hrivnia"/>
            </RelativeLayout>

            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:text="Подтвердить"
                android:id="@+id/confirm_reservation"
                android:background="@color/colorBlack"
                android:textColor="@color/colorWhite"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <include layout="@layout/bottom_sheet_gender"/>
    <include layout="@layout/bottom_sheet_calendar"/>
    <include layout="@layout/bottom_sheet_hairdressers"/>
    <include layout="@layout/bottom_sheet_service"/>
</android.support.design.widget.CoordinatorLayout>